--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+pymysql = "*"
+requests = "*"
 
 [requires]
-python_version = "2.7"
+python_version = "3.8"
