--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.formatting.provider": "black",
-    "python.pythonPath": "venv/bin/python"
+    "python.pythonPath": "/Users/Ron/.local/share/virtualenvs/CovidData-sPw8N64Q/bin/python"
 }
